# Pretrain-YoloV5

./: main.py  pyproject.toml
labs/lab1/: lab1.py  lab1_6510110497.ipynb
labs/lab3/: compareYolo_Unet.py
labs/lab4/: tobe_bin.py
labs/lab4/gt/: labelmap.txt
yolov5/: TensorBoard_README.md  train.py  train_tensor.py
yolov5/dataset_BB copy/total/: train.txt
yolov5/dataset_BB/total/: data.yaml  train.cache  train.txt  train_val.ipynb  val.cache  val.txt
yolov5/dataset_allBB/: data.yaml  train.txt  train_val.ipynb  val.txt
yolov5/labs/lab1/: lab1.ipynb
yolov5/labs/lab3/: labelmap.txt
yolov5/labs/lab4/: comapre_iou.py
yolov5/labs/lab5/: check.ipynb  convert_file.ipynb
yolov5/models/: common.py
yolov5/runs/train/exp/: opt.yaml  (+2 more)
yolov5/segment/: bin_predict.py  bin_predict2.py  predict.py  zinth.py
yolov5/segment/dataset_segment/: data.yaml  train.txt  train_val.ipynb  val.txt
yolov5/utils/: torch_utils.py
yolov5/wandb/run-20250807_183409-l95j3rby/: run-l95j3rby.wandb
yolov5/wandb/run-20250807_183539-efr235vm/: run-efr235vm.wandb
yolov5/wandb/run-20250807_183640-oaay7vui/: run-oaay7vui.wandb
yolov5/wandb/run-20250807_184345-6h45dncl/: run-6h45dncl.wandb
yolov5/wandb/run-20250807_184547-muy9bcx0/: run-muy9bcx0.wandb
yolov5/wandb/run-20250807_185031-tfhp6pfh/: run-tfhp6pfh.wandb
yolov5/wandb/run-20250807_190730-41gmmq8g/: run-41gmmq8g.wandb
yolov5/wandb/run-20250807_190926-ezq5ava1/: run-ezq5ava1.wandb
yolov5/wandb/run-20250807_191021-jhbeuy5k/: run-jhbeuy5k.wandb
yolov5/wandb/run-20250807_214514-7fkxgh8j/: run-7fkxgh8j.wandb
(+676 files in other folders)
