[project]
name = "program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=80.9.0",
    "ultralytics>=8.3.161",
    "opencv-python",
    "wandb>=0.21.0",
    "utils>=1.0.2",
    "matplotlib>=3.10.3",
    "tensorboard>=2.20.0",
]


[project.optional-dependencies]

cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]

cu118 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "torchaudio>=2.7.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
]

torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118" },
]

torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cu118"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
